--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -24,9 +24,9 @@
 	<!-- Slick Slider -->
 	<link href="{% static 'web_01/css/slick.css' %}" rel="stylesheet">
 	<!-- Custom Stylesheet -->
-	<link href="{% static 'web_01/css/style-blue.css' %}" rel="stylesheet">
+	<link href="{% static style %}" rel="stylesheet">
 	<!-- Custom Responsive -->
-	<link href="{% static 'web_01/css/responsive.css' %}" rel="stylesheet">
+	<link href="{% static responsive %}" rel="stylesheet">
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700&display=swap"
 		  rel="stylesheet">
