--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -44,8 +44,8 @@
 					<div class="d-table-cell">
 						<div class="login-form">
 							<div class="logo">
-								<div><a class="logo" href="/"><span class="text-primary">.</span>آرم شما</a>
-								</div>
+								<div><a style="float: right" class="logo" href="/"><span class="text-primary">.</span>آرم شما</a>
+		</div>
 							</div>
 							<h3>دوباره خوش آمدید</h3>
 							<p>ثبت نام نکرده اید؟ <a href="/signup/">ثبت نام</a>
