--- a/templates/users/logout.html
+++ b/templates/users/logout.html
@@ -44,8 +44,8 @@
 					<div class="d-table-cell">
 						<div class="login-form">
 							<div class="logo">
-								<div><a class="logo" href="/"><span class="text-primary">.</span>آرم شما</a>
-								</div>
+								<div><a style="float: right" class="logo" href="/"><span class="text-primary">.</span>آرم شما</a>
+		</div>
 							</div>
 							<h3>شما از</h3>
 							<h3>{{ logged_out_user.email }}</h3>
