--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -43,8 +43,8 @@
 							<div class="login-form">
 								<div class="logo">
 									<!-- Logo container-->
-									<div><a class="logo" href="/"><span class="text-primary">.</span>آرم شما</a>
-									</div>
+									<div><a style="float: right" class="logo" href="/"><span class="text-primary">.</span>آرم شما</a>
+		</div>
 								</div>
 								<h3>به سایت ما خوش آمدید</h3>
 								<p>قبلا ثبت نام کرده اید؟<a href="/login/">ورود</a>
